# optimal_active_guidance_in_mixed_reality_using_prior_floorplans

./: README.md  mav_active_3d_planning_https.rosinstall  mav_active_3d_planning_ssh.rosinstall
active_3d_planning_app_reconstruction/: package.xml
active_3d_planning_app_reconstruction/launch/: evaluate_experiment.launch  (+6 more)
active_3d_planning_core/: CMakeLists.txt  package.xml
active_3d_planning_core/include/active_3d_planning_core/module/trajectory_evaluator/cost_computer/: drift_estimator.h  floorplan_drift_estimator.h
active_3d_planning_core/include/active_3d_planning_core/planner/: online_planner.h
active_3d_planning_core/src/module/trajectory_evaluator/: naive_evaluator.cpp  yaw_planning_evaluator.cpp
active_3d_planning_core/src/module/trajectory_evaluator/cost_computer/: drift_estimator.cpp  floorplan_drift_estimator.cpp  segment_time.cpp
active_3d_planning_core/src/module/trajectory_evaluator/value_computers/: global_normalized_gain.cpp
active_3d_planning_core/src/planner/: online_planner.cpp
mav_active_3d_planning/: README.md
utils/: build_vi_map_evaluations.sh  build_vimaps.sh  build_vimaps_bag.sh  build_vimaps_maze.sh  build_vimaps_queries.sh  extract_query_positions.py  plot_drift_errors.py  plot_graph.py  plot_multiple_drift_errors.py  plot_planner_comp.py  plot_relocalization_hist.py  plot_time_coverage.py  plot_time_occupancy.py  run_eval.sh  run_experiment_test.sh  run_experiments.sh  run_experiments_maze.sh  run_experiments_warehouse.sh  split_rosbags.py  transform_estimates.py  visualize_localization_eval.py  visualize_pointclouds.cpp
(+16 files in other folders)
