<?xml version="1.0"?>
<package format="2">
    <name>active_3d_planning_core</name>
    <version>0.0.0</version>
    <description>Core functionality for Active Informative Path Planning for 3D tasks</description>

    <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>glog_catkin</depend>
    <depend>eigen_catkin</depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
</package>